--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       <br><a href="tel:+2348141214517">Phone</a>
     </address>
     <p>I would love to hear from you</p>
-    <form action="mailto:royaltyinta15@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:royaltyint15@gmail.com" method="post" enctype="text/plain">
 
       <p> <label for="name">Name</label>
         <input type="text" name="name" id="name">
